<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_with_google"
            style="@style/Theme.StockbitApp.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/login_with_google_text"
            app:icon="@drawable/ic_google"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_login_with_facebook"
            style="@style/Theme.StockbitApp.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/login_with_facebook_text"
            app:icon="@drawable/ic_facebook"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_with_google" />

        <View
            android:id="@+id/left_divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toStartOf="@+id/tv_or"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_or" />

        <TextView
            android:id="@+id/tv_or"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/or_text"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/right_divider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/left_divider"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_with_facebook" />

        <View
            android:id="@+id/right_divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tv_or"
            app:layout_constraintTop_toTopOf="@id/tv_or" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/Theme.StockbitApp.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username_or_email_text"
            app:layout_constraintTop_toBottomOf="@id/tv_or">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                style="@style/Theme.StockbitApp.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_or_email_text"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Theme.StockbitApp.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_username"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/Theme.StockbitApp.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forget_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forget_password_text"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            app:rippleColor="@color/mid_gray" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/green"
            android:padding="14dp"
            android:text="@string/login_text"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/btn_forget_password" />

        <Button
            android:id="@+id/btn_login_with_fingerprint"
            style="@style/Theme.StockbitApp.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/login_with_fingerprint_text"
            android:textColor="@color/green"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:strokeColor="@color/green" />

        <Button
            android:id="@+id/btn_create_account"
            style="@style/Theme.StockbitApp.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_with_fingerprint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>